<resources>

    <string name="app_name">LoL Champion Mastery</string>
    <string name="settings">Settings</string>
    <string name="mastery_view_label">Player Mastery</string>

    <string name="api_summoner_base">https://eun1.api.riotgames.com/lol/summoner/v4/summoners/by-name/</string>
    <string name="api_mastery_base">https://eun1.api.riotgames.com/lol/champion-mastery/v4/champion-masteries/by-summoner/</string>
    <string name="api_static_icons_root">https://ddragon.leagueoflegends.com/cdn/10.12.1/img/profileicon/</string>

    <string name="default_summonername">in Clitoris</string>
    <string name="placeholder_summonername">Loading…</string>
    <string name="player_level">Level %1$s</string>
    <string name="offline_available_names">Offline available names:\n\n %1$s</string>

    <string name="fetch_error_1">Invalid summoner name</string>
    <string name="fetch_error_2">or API key expired.</string>

    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="placeholder_search">Summoner name (EUNE)</string>
    <string name="button_search">Search summoner</string>
    <string name="button_offline_search">Offline search</string>

    <string name="button_save">Save</string>

    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="not_available">n/a</string>
    <string name="placeholder_api_key">API key</string>

    <string name="text_riot_api_signup_url">You can get your free Riot Developer API key if you sign up for an account for free:\n https://developer.riotgames.com/</string>
    <string name="profile_picture">Profile Picture</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_cancel">Cancel</string>
    <string name="content_description_mastery_icon">Mastery Icon</string>
    <string name="content_description_champion_icon">Champion Icon</string>
    <string name="placeholder_champion_name">Ahri</string>
    <string name="placeholder_champion_points">5 000 000</string>
    <string name="switch_offline">Offline</string>
    <string name="level_offline">Offline mode</string>
</resources>