<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">

        <ImageView
            android:id="@+id/imageView_championIcon"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:contentDescription="@string/content_description_champion_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@drawable/champion_ahri" />

        <ImageView
            android:id="@+id/imageView_masteryIcon"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:contentDescription="@string/content_description_mastery_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@drawable/mastery_lvl7" />

        <TextView
            android:id="@+id/textView_championName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/placeholder_champion_name"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/imageView_championIcon"
            app:layout_constraintStart_toEndOf="@+id/imageView_championIcon"
            app:layout_constraintTop_toTopOf="@+id/imageView_championIcon" />

        <TextView
            android:id="@+id/textView_championPoints"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/placeholder_champion_points"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/imageView_masteryIcon"
            app:layout_constraintEnd_toStartOf="@+id/imageView_masteryIcon"
            app:layout_constraintTop_toTopOf="@+id/imageView_masteryIcon" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>